CMAKE_MINIMUM_REQUIRED(VERSION 1.8)
PROJECT(DBSCAN)
SET( CMAKE_CXX_COMPILER "g++" )

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

LINK_DIRECTORIES( ${PROJECT_SOURCE_DIR}/lib )

INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include )

ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/src)
